# raft-implementation-rust

./: .gitignore  Cargo.toml  README.md
proto/: raft.proto
src/: client.rs  coba.rs  http_interface.rs  node_srv.rs  node_srv_backup.rs.bak
src/helper/: config.rs  election.rs  lazyrecon.rs  mod.rs  node.rs  queue.rs  rpc.rs  rw.rs  state.rs  timer.rs
ui/: index.html  package.json
ui/src/: App.tsx  main.tsx  theme.ts
