[package]
name = "raft-sister"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "raft-node-server"
path = "src/node_srv.rs"

[[bin]]
name = "raft-client"
path = "src/client.rs"

[[bin]]
name = "trial"
path = "src/coba.rs"

[[bin]]
name = "http-interface"
path = "src/http_interface.rs"

[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'

[dependencies]
prost = "0.11.9"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.9.2"
serde = { version="1.0.162", features= ["derive"]}
serde_json = "1.0.96"
rand = "0.8.4"
actix-web = "4"

[build-dependencies]
tonic-build = "0.9.2"
